# PrintScreen

./: .gitignore  Aclnoligments.md  Compillation Instructions.m d  LICENSE  PrintScreen.esm
C++ SKSE PLUGIN CODE/: CMakeLists.txt  HUD_Menu_Controle.txt  PCH.h  Readme.txt  meta.ini  plugin.cpp  vcpkg.json
Interface/PrintScreen/: ScreenShot03.dds
Papyrus Code Structure/: PrintScreen.code-workspace  PrintScreen.esm  ReadMe.txt  skyrimse.ppj
Papyrus Code Structure/Interface/PrintScreen/: ScreenShot01.dds  ScreenShot02.dds  ScreenShot04.dds  ScreenShot05.dds  ScreenShot06.dds
Papyrus Code Structure/Scripts/: ItemCardDebug.pex  PlayerRef_Script.pex  PrintScreen_Formula_Script.pex  PrintScreen_MCM_Script.pex  PrintScreen_ME_OpenMenu.pex  PrintScreen_ME_Script.pex  PrintScreen_MainQuest_Script.pex  PrintScreen_Map_Script.pex
Papyrus Code Structure/Scripts/Source/: ItemCardDebug.psc  PrintScreen_Formula_Script.psc  PrintScreen_MCM_Script.psc  PrintScreen_ME_OpenMenu.psc  PrintScreen_ME_Script.psc  PrintScreen_MainQuest_Script.psc
Papyrus Scripts/: PrintScreenV4.esp  PrintscreenV4_Workspace.code-workspace  meta.ini  printscreen-docs.md  skyrimse.ppj
Papyrus Scripts/Scripts/: PSV4_PlayerRef_Script.pex  PrintSCreenV4_MAP_Script.pex  PrintSCreenV4_MAP_Script.psc  PrintSCreenV4_ME_Script.pex  PrintScreen.esm  PrintScreenV4_formula_Script.pex  PrintScreenV4_mcm_script.pex  PrintscreenV4_Quest_Script.pex  skyrimse.ppj
Papyrus Scripts/Scripts/Scripts/: PrintScreen_MCM_Script.pex  PrintScreen_ME_Script.pex  PrintScreen_MainQuest_Script.pex  PrintScreen_Map_Script.pex
Papyrus Scripts/Scripts/Source/: PSV4_PlayerRef_Script.psc  PrintSCreenV4_ME_Script.psc  (+8 more)
Scripts/: PlayerRef_Script.pex  PrintScreen_MCM_Script.pex  PrintScreen_ME_Script.pex  PrintScreen_MainQuest_Script.pex  PrintScreen_Map_Script.pex
Scripts/Source/: PlayerRef_Script.psc  PrintScreen_MCM_Script.psc  PrintScreen_ME_Script.psc  PrintScreen_MainQuest_Script.psc  PrintScreen_Map_Script.psc
(+5 files in other folders)
